# combination-traversal

./: .gitignore  CMakeLists.txt  CombiIdxMgr.cpp  CombiIdxMgr.h  CombinationGen.h  README.md  main.cpp  makefile
